# benchmark-russell

./: .gitignore  Cargo.toml  README.md  get-matrices-info.bash  solve-problems.bash
data/: matrices.json
results/arch/cudss/: cudss-ASIC_680k.json  cudss-Chevron4.json  cudss-Emilia_923.json  cudss-Flan_1565.json  cudss-Freescale1.json  cudss-Goodwin_040.json  cudss-Goodwin_071.json  cudss-Goodwin_127.json  cudss-PFlow_742.json  cudss-RFdevice.json  cudss-Raj1.json  cudss-Transport.json  cudss-atmosmodd.json  cudss-atmosmodl.json  cudss-boyd2.json  cudss-bwm2000.json  cudss-darcy003.json  cudss-dielFilterV2real.json  cudss-dielFilterV3clx.json  cudss-fem_filter.json  cudss-fem_hifreq_circuit.json  cudss-fp.json  cudss-helm2d03.json  cudss-inline_1.json  cudss-kim2.json  cudss-marine1.json  cudss-memchip.json  cudss-mhd1280b.json  cudss-mono_500Hz.json  cudss-mplate.json  cudss-oilpan.json  cudss-pre2.json  cudss-pres-cylin-3d-tet10-fine.json  cudss-rajat31.json  cudss-rdb5000.json  cudss-rma10.json  cudss-stomach.json  cudss-tmt_unsym.json  cudss-torso1.json  cudss-twotone.json  (+2 more)
results/arch/klu/: klu-ASIC_680k.json  klu-Freescale1.json  klu-Goodwin_040.json  klu-Goodwin_071.json  klu-Goodwin_127.json  klu-Raj1.json  klu-boyd2.json  klu-bwm2000.json  klu-darcy003.json  klu-fp.json  klu-helm2d03.json  klu-marine1.json  klu-memchip.json  klu-oilpan.json  klu-rajat31.json  (+7 more)
src/: all_results.rs  constants.rs  lib.rs  matrix_info.rs  matrix_table_md.rs  util.rs
src/latex/: call_latexmk.rs  mod.rs  performance_table.rs
src/markdown/: mod.rs  performance_table_md.rs
(+211 files in other folders)
